Advertisement accept policies
- AdvertisementConfig has been modified with 2 major fields, one for the broadcaster the other for the operator.
- in AdvOperatorConfig, the autoAccept flag is now an enum with different types of acceptance policies

--- a/deployments/liqo_chart/templates/clusterconfig.yaml
+++ b/deployments/liqo_chart/templates/clusterconfig.yaml
@@ -6,10 +6,12 @@ metadata:
     app: liqo.io
 spec:
   advertisementConfig:
-    autoAccept: true
-    maxAcceptableAdvertisement: 5
-    resourceSharingPercentage: 30
-    enableBroadcaster: true
+    advOperatorConfig:
+      acceptPolicy: AutoAcceptWithinMaximum
+      maxAcceptableAdvertisement: 5
+    broadcasterConfig:
+      resourceSharingPercentage: 30
+      enableBroadcaster: true
     keepaliveThreshold: 3
     keepaliveRetryTime: 20
   discoveryConfig:
