--- a/config/cluster-config/crd/bases/policy.liqo.io_clusterconfigs.yaml
+++ b/config/cluster-config/crd/bases/policy.liqo.io_clusterconfigs.yaml
@@ -38,10 +38,34 @@ spec:
           properties:
             advertisementConfig:
               properties:
-                autoAccept:
-                  type: boolean
-                enableBroadcaster:
-                  type: boolean
+                advOperatorConfig:
+                  properties:
+                    acceptPolicy:
+                      description: AcceptPolicy defines the policy to accept/refuse
+                        an Advertisement
+                      enum:
+                      - AutoAcceptAll
+                      - AutoAcceptWithinMaximum
+                      - AutoRefuseAll
+                      - Manual
+                      type: string
+                    maxAcceptableAdvertisement:
+                      format: int32
+                      minimum: 0
+                      type: integer
+                  required:
+                  - acceptPolicy
+                  type: object
+                broadcasterConfig:
+                  properties:
+                    enableBroadcaster:
+                      type: boolean
+                    resourceSharingPercentage:
+                      format: int32
+                      maximum: 100
+                      minimum: 0
+                      type: integer
+                  type: object
                 keepaliveRetryTime:
                   format: int32
                   minimum: 0
@@ -50,17 +74,6 @@ spec:
                   format: int32
                   minimum: 0
                   type: integer
-                maxAcceptableAdvertisement:
-                  format: int32
-                  minimum: 0
-                  type: integer
-                resourceSharingPercentage:
-                  format: int32
-                  maximum: 100
-                  minimum: 0
-                  type: integer
-              required:
-              - autoAccept
               type: object
             discoveryConfig:
               properties:
