Removing GATEWAY_PRIVATE_IP parameter from the LIQO install script Route-operator gets the configuration from the clusterconfig.policy.liqo.io CRD

--- a/config/cluster-config/crd/bases/policy.liqo.io_clusterconfigs.yaml
+++ b/config/cluster-config/crd/bases/policy.liqo.io_clusterconfigs.yaml
@@ -108,7 +108,7 @@ spec:
               type: object
             liqonetConfig:
               properties:
-                gatewayPrivateIP:
+                podCIDR:
                   type: string
                 reservedSubnets:
                   description: contains a list of reserved subnets in CIDR notation
@@ -133,7 +133,7 @@ spec:
                   - Vni
                   type: object
               required:
-              - gatewayPrivateIP
+              - podCIDR
               - reservedSubnets
               type: object
           required:
