--- a/scripts/cluster-config/Makefile
+++ b/scripts/cluster-config/Makefile
@@ -32,7 +32,7 @@ deploy: manifests
 
 # Generate manifests e.g. CRD, RBAC etc.
 manifests: controller-gen
-	$(CONTROLLER_GEN) $(CRD_OPTIONS) paths="./api/cluster-config/v1" output:crd:artifacts:config=config/cluster-config/crd/bases
+	$(CONTROLLER_GEN) $(CRD_OPTIONS) paths="../../api/cluster-config/v1" output:crd:artifacts:config=../../config/cluster-config/crd/bases
 
 # Run go fmt against code
 fmt:
@@ -44,7 +44,7 @@ vet:
 
 # Generate code
 generate: controller-gen
-	$(CONTROLLER_GEN) object:headerFile=./hack/boilerplate.go.txt paths="./..."
+	$(CONTROLLER_GEN) object:headerFile=../../hack/boilerplate.go.txt paths="../../api/cluster-config/v1"
 
 # Build the docker image
 docker-build: test
