--- a/deployments/liqo_chart/crds/policy.liqo.io_clusterconfigs.yaml
+++ b/deployments/liqo_chart/crds/policy.liqo.io_clusterconfigs.yaml
@@ -64,8 +64,6 @@ spec:
               type: object
             discoveryConfig:
               properties:
-                allowUntrustedCA:
-                  type: boolean
                 autojoin:
                   type: boolean
                 autojoinUntrusted:
@@ -84,6 +82,8 @@ spec:
                   maximum: 65355
                   minimum: 1
                   type: integer
+                allowUntrustedCA:
+                  type: boolean
                 service:
                   type: string
                 updateTime:
@@ -108,7 +108,7 @@ spec:
               type: object
             liqonetConfig:
               properties:
-                gatewayPrivateIP:
+                podCIDR:
                   type: string
                 reservedSubnets:
                   description: contains a list of reserved subnets in CIDR notation
@@ -133,7 +133,7 @@ spec:
                   - Vni
                   type: object
               required:
-              - gatewayPrivateIP
+              - podCIDR
               - reservedSubnets
               type: object
           required:
@@ -147,9 +147,9 @@ spec:
       type: object
   version: v1
   versions:
-  - name: v1
-    served: true
-    storage: true
+    - name: v1
+      served: true
+      storage: true
 status:
   acceptedNames:
     kind: ""
